<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.csahmad.moodcloud.CreateAccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/create"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:text="Create Account" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_dark"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/username"
        android:layout_marginBottom="48dp"
        android:text="Username:"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="131dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/usernameText"
        android:layout_marginTop="26dp"
        android:text="Password:"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/backButton"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:tint="@android:color/background_light"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/notUnique"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/usernameText"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

</RelativeLayout>
