...
            android:layout_weight="1"
            android:background="@color/colorTabs"
            android:text="Following"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />

        <Button
            android:id="@+id/profileButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorTabs"
            android:text="Profile"
            android:textAppearance="@android:style/TextAppearance.Medium.Inverse" />
    </LinearLayout>

    <TextView
        android:id="@+id/profileName"
        android:text="test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_toStartOf="@+id/button4"
        android:layout_below="@+id/linearLayout"
...
